--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-<meta http-equiv="refresh" content="0;url=https://droom.in/hoot-to-scoot?utm_source=alliance&utm_medium=freekaamaal&utm_campaign=Used-Scooters
-" />
+<meta http-equiv="refresh" content="0;url=https://youtu.be/kJ1on4Z1wIc" />
