--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;url=https://youtu.be/h5l7VoqPfHc" />
+<meta http-equiv="refresh" content="0;url=https://mediabuy.live" />
